# orange-swan-mood-indicator

./: .env.example  Makefile  README.md  app.py  pyproject.toml
app/: main.py
app/analysis/prompts/: system_prompts.py  user_prompts.py
app/api/: app.py  routes.py
app/config/: db.py  settings.py
app/ingestion/: fetcher.py  parser.py  proxy_manager.py
app/rag/: mood_retriever.py
app/repositories/: mood_state_repo.py  posts_repo.py
app/services/: batch_summarizer.py  fetch_cycle.py  llm_client.py  local_analyzer.py  mood_synthesizer.py  test.json
app/utils/: constants.py  logger.py
